--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,11 @@
-title: phvv.me homepage
+title: phvv.me
 description: Bookmark this to keep an eye on my project updates!
 
+# https://github.com/pages-themes/minimal
 theme: jekyll-theme-minimal
+logo: /assets/icon/icon-dark.svg
+show_downloads: true
+# TODO: google_analytics: 
 
 # reference: https://jekyllrb.com/docs/configuration/options/
 source: .
