about me bug fix

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: phvv.me
-description: Bookmark this to keep an eye on my project updates!
+description: Pedro Valois' personal website. Bookmark to keep an eye on my project updates!
 
 # https://github.com/pages-themes/minimal
 theme: jekyll-theme-minimal
