theme skin change

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,5 @@ repos:
   rev: 0.2.3
   hooks:
   - id: yamlfmt
-    args: [--mapping, '2',
-      --sequence, '2', --offset,
-      '0', --width, '25']
+    args: [--mapping, '2', --sequence, '2', --offset, '0', --width, '100']
     exclude: robo.yml
