--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 ---
 title: phvv.me
-description: Pedro Valois'
-  personal website. Bookmark
-  to keep an eye on my project
-  updates!
+description: Pedro Valois' personal website. Bookmark to keep an eye on my project updates!
 
 plugins:
 - jekyll-remote-theme
@@ -17,6 +14,7 @@ plugins:
 
 # https://github.com/mmistakes/minimal-mistakes
 remote_theme: mmistakes/minimal-mistakes@4.24.0
+minimal_mistakes_skin: dark
 
 # reference: https://jekyllrb.com/docs/configuration/options/
 source: .
