another attempt to fix

--- a/_config.yml
+++ b/_config.yml
@@ -241,6 +241,7 @@ footer_scripts:
 after_footer_scripts:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - /assets/js/settings.js
 
 # Archives
 #  Type
