--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ title_separator          : "|"
 subtitle                 : Pedro Valois # site tagline that appears below site title in masthead
 name                     : Pedro Valois
 description              : Pedro Valois' personal website. Bookmark to keep an eye on my project updates!
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://phvv.me # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : phvv-me/phvv-me.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : /assets/icon/icon-dark.svg # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : phvv.me # overrides the website title displayed in the masthead, use " " for no title
@@ -109,7 +109,7 @@ social:
 analytics:
   provider               : google-gtag # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : 380213528
+    tracking_id          : G-ZYYF3GKNTE
     anonymize_ip         : false # true, false (default)
 
 # Site Author
