--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 # Site Author
 author:
   name             : Pedro Valois
-  avatar           : /assets/profile/profile-02.webp # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/profile/profile-02.webp # path of avatar image
   bio              : Another guy trying to create **AI** while studying japanese and playing games.
   location         : Japan 🗾
   # email            : vaz.valois@hotmail.com
