removing much content, lean homepage

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,5 @@
 ---
 # https://mmistakes.github.io/minimal-mistakes/docs/navigation/#masthead
-main:
-- title: Posts
-  url: /year-archive/
-- title: Categories
-  url: /categories/
-- title: Tags
-  url: /tags/
+# main:
+# - title: Posts
+#   url: /year-archive/
