--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ safe: true
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-# theme                  : "minimal-mistakes-jekyll"
-remote_theme             : "mmistakes/minimal-mistakes"
+remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
 minimal_mistakes_skin    : dark # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -116,7 +115,7 @@ analytics:
 author:
   name             : Pedro Valois
   avatar           : /assets/profile/profile-02.webp # path of avatar image
-  bio              : Another guy trying to create **AI** while studying japanese and playing games.
+  bio              : Research, Japanese & Games 📚
   location         : Japan 🗾
   # email            : vaz.valois@hotmail.com
   links: &links
@@ -143,7 +142,8 @@ author:
       # url: "https://facebook.com/"
 
 # Site Footer
-footer: *links
+footer: 
+  links: *links
 
 # Reading Files
 include:
@@ -214,7 +214,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 10 # amount of posts to show
+paginate: 20 # amount of posts to show
 paginate_path: /page:num/
 timezone: Asia/Tokyo # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -291,8 +291,8 @@ defaults:
       show_date: true
       read_time: true
       comments: # true
-      share: true
-      related: true
+      share: false
+      related: false
   - scope:
       path: ''
       type: pages
