--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,9 @@ author:
   location         : Japan 🗾
   # email            : vaz.valois@hotmail.com
   links: &links
+    - label: Medium
+      icon: fab fa-fw fa-medium
+      url: &medium https://phvv.medium.com/
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:vaz.valois@hotmail.com
