--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ author:
       url: &medium https://phvv.medium.com/subscribe
     - label: Email
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:vaz.valois@hotmail.com
+      url: mailto:contact@phvv.me
     - label: GitHub
       icon: fab fa-fw fa-github
       url: &github https://github.com/pedrexus
