--- a/_config.yml
+++ b/_config.yml
@@ -122,9 +122,9 @@ author:
     - label: Publications
       icon: "fas fa-fw fa-graduation-cap"
       url: &scholar https://scholar.google.com/citations?user=2YyfBOgAAAAJ
-    # - label: Posts
-      # icon: fab fa-fw fa-medium
-      # url: &medium https://phvv.medium.com/subscribe
+    - label: Posts
+      icon: fab fa-fw fa-medium
+      url: &medium https://phvv.medium.com/subscribe
     - label: Email
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:contact@phvv.me
